2009-10-05  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.Projects.Dom/IUsing.cs:
	* MonoDevelop.Projects.Dom/DomType.cs:
	* MonoDevelop.Projects.Dom/DomEvent.cs:
	* MonoDevelop.Projects.Dom/DomUsing.cs:
	* MonoDevelop.Projects.Dom/DomMethod.cs:
	* MonoDevelop.Projects.Dom/IParameter.cs:
	* MonoDevelop.Projects.Dom/IAttribute.cs:
	* MonoDevelop.Projects.Dom/DomProperty.cs:
	* MonoDevelop.Projects.Dom/IReturnType.cs:
	* MonoDevelop.Projects.Dom/IBaseMember.cs:
	* MonoDevelop.Projects.Dom/DomAttribute.cs:
	* MonoDevelop.Projects.Dom/CompoundType.cs:
	* MonoDevelop.Projects.Dom/DomParameter.cs:
	* MonoDevelop.Projects.Dom/DomCecilType.cs:
	* MonoDevelop.Projects.Dom/TypeParameter.cs:
	* MonoDevelop.Projects.Dom/DomReturnType.cs:
	* MonoDevelop.Projects.Dom/LocalVariable.cs:
	* MonoDevelop.Projects.Dom/DomCecilEvent.cs:
	* MonoDevelop.Projects.Dom/DomCecilField.cs:
	* MonoDevelop.Projects.Dom/AbstractMember.cs:
	* MonoDevelop.Projects.Dom/DomCecilMethod.cs:
	* MonoDevelop.Projects.Dom/ITypeParameter.cs:
	* MonoDevelop.Projects.Dom/CompilationUnit.cs:
	* MonoDevelop.Projects.Dom/ExtensionMethod.cs:
	* MonoDevelop.Projects.Dom/DomCecilProperty.cs:
	* MonoDevelop.Projects.Dom/DomCecilParameter.cs:
	* MonoDevelop.Projects.Dom/DomCecilAttribute.cs:
	* MonoDevelop.Projects.Dom/DomMemberDecorator.cs:
	* MonoDevelop.Projects.Dom/InstantiatedMethod.cs:
	* MonoDevelop.Projects.Dom/DomCecilCompilationUnit.cs: Added
	  dispose chain.

2009-10-05  Lluis Sanchez Gual  <lluis@novell.com>

	* MonoDevelop.Projects.Dom.Parser/ProjectDomService.cs: Don't
	  initialize the help tree if not requested.

	* MonoDevelop.Projects.Dom.Serialization/DomPersistence.cs:
	  Use a custom binary serializer to serialize CodeExpression
	  objects. Fixes issues with Mono changing internal fields.

	* MonoDevelop.Projects.Dom.Serialization/CodeCompletionDatabase.cs:
	  Bump database version.

2009-10-05  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.Projects.Dom/AbstractMember.cs: Fixed failing